moves visibility ratom outside gallery component, fixes image links

--- a/less/site.less
+++ b/less/site.less
@@ -152,6 +152,8 @@ h3 mark {
     height: 100%;
     width: auto;
     border-radius: .15em;
+  }
+  a img {
     &:hover {
       mix-blend-mode: multiply;
     }
